# webhooks_handler

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  main.py
app/models/: __init__.py  webhook_payload.py
app/services/: __init__.py  api_service.py  token_service.py
app/utils/: __init__.py  utils.py
